version 1.9.12, in progress
- "foreign" command: add support for Python + numpy
- "markers" command: add support for the panel-data case
  where the number of markers equals the number of cross-
  sectional units
- "delete" command: add option to delete all variables of a
  specified type
- "qlrtest" command: compute asymptotic p-value as per Bruce
  Hansen's method (1997)
- You can now use "bundle b = null" to create a new bundle or
  empty an existing one
- Add new function strstrip()
- lags() function: add an optional third parameter to control
  the ordering of terms in the output list
- mread() and mwrite() functions: add an optional argument to
  direct read/write to the user's "dot directory"
- Improve structural integrity of model specification dialog
  (it now behaves properly on resizing)
- Gnuplot version: require 4.4.0 (March 2010) or higher
- GUI preferences dialog: add facility to set the default scale
  for PNG plots
- GUI Tools menu: add an item to launch an interactive gnuplot
  session
- GUI Add menu: add support for auto-generated dummy variables
  that code for a specific range of observations (or a single
  observation)
- Fix bug: transient objects created within functions were 
  appearing in the GUI icon view window
- Fix bug: possible crash when regressors are dropped from a
  random-effects panel model due to near-prefect collinearity
- User's Guide: clarify the use of string substitution, plus
  various small updates
- Environment: respect GRETL_CONFIG_FILE to override the
  default of ~/.gretl2rc on unix-type systems

2012-11-21 version 1.9.11
- Substantial re-write of code for handling named variables
  other than series (matrices, scalars, strings, etc.) in the
  interest of maintainability and efficiency
- "restrict" command: try to ensure that standard errors show
  as zero when they are in principle zero
- "loop": support use of $-substitution in the expression that
  controls a nested loop